# fastx_read_count

./: .gitignore  README  configure.ac
src/: Makefile.am  main.cpp
tests/: Makefile.am  test.cpp
